syntax = "proto3";

package service;

option java_multiple_files = true;
option java_package = "pt.ulisboa.tecnico.sirs.grpc";

service ServerService {
  rpc getLocation(LocationRequest) returns (LocationResponse);
  rpc getLocationHistory(LocationRequest) returns (stream LocationResponse);
}

message LocationRequest {
  string guardianId = 1;
  string childId = 2;
}

message LocationResponse {
  string location = 1;
}